--- a/index.html
+++ b/index.html
@@ -1,11 +1,167 @@
 <!DOCTYPE html>
-<html lang="en">
+<html lang="zh-CN">
+
 <head>
-    <meta charset="UTF-8">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <meta charset="utf-8">
+    <meta http-equiv="X-UA-Compatible" content="IE=edge">
+    <meta name="viewport" content="width=device-width, initial-scale=1">
+    <!-- 上述3个meta标签*必须*放在最前面，任何其他内容都*必须*跟随其后！ -->
     <title>心诚科技工作室</title>
+
+    <!-- Bootstrap -->
+    <link href="./assets/lib/bootstrap-3.3.7/css/bootstrap.min.css" rel="stylesheet">
+
+    <!-- HTML5 shim 和 Respond.js 是为了让 IE8 支持 HTML5 元素和媒体查询（media queries）功能 -->
+    <!-- 警告：通过 file:// 协议（就是直接将 html 页面拖拽到浏览器中）访问页面时 Respond.js 不起作用 -->
+    <!--[if lt IE 9]>
+      <script src="https://cdn.jsdelivr.net/npm/html5shiv@3.7.3/dist/html5shiv.min.js"></script>
+      <script src="https://cdn.jsdelivr.net/npm/respond.js@1.4.2/dest/respond.min.js"></script>
+    <![endif]-->
+
+    <link rel="stylesheet" href="./assets/css/main.css">
 </head>
+
 <body>
-    <h2>Hello World!</h2>
+    <!-- 导航条 -->
+    <nav class="navbar navbar-default navbar-fixed-top">
+        <div class="container">
+            <!-- Brand and toggle get grouped for better mobile display -->
+            <div class="navbar-header">
+                <button type="button" class="navbar-toggle collapsed" data-toggle="collapse"
+                    data-target="#bs-example-navbar-collapse-1" aria-expanded="false">
+                    <span class="sr-only">Toggle navigation</span>
+                    <span class="icon-bar"></span>
+                    <span class="icon-bar"></span>
+                    <span class="icon-bar"></span>
+                </button>
+                <a class="navbar-brand" href="./">
+                    <img alt="心诚科技工作室" src="./assets/images/logo.png">
+                </a>
+            </div>
+
+            <!-- Collect the nav links, forms, and other content for toggling -->
+            <div class="collapse navbar-collapse" id="bs-example-navbar-collapse-1">
+                <ul class="nav navbar-nav navbar-right">
+                    <li class="active"><a href="./">首页 <span class="sr-only">(current)</span></a></li>
+                    <li><a href="#service">服务项目</a></li>
+                    <li><a href="#case">客户案例</a></li>
+                    <li><a href="#about">关于我们</a></li>
+                    <li><a href="#contact">联系我们</a></li>
+                </ul>
+            </div><!-- /.navbar-collapse -->
+        </div><!-- /.container-fluid -->
+    </nav>
+    <!-- 轮播图 -->
+    <div id="carousel-banner" class="carousel slide banner" data-ride="carousel">
+        <!-- Indicators -->
+        <ol class="carousel-indicators">
+            <li data-target="#carousel-banner" data-slide-to="0" class="active"></li>
+            <li data-target="#carousel-banner" data-slide-to="1"></li>
+        </ol>
+
+        <!-- Wrapper for slides -->
+        <div class="carousel-inner" role="listbox">
+            <div class="item active">
+                <img src="./assets/images/banner1.png" alt="...">
+                <!-- <div class="carousel-caption"></div> -->
+            </div>
+            <div class="item">
+                <img src="./assets/images/banner2.png" alt="...">
+                <!-- <div class="carousel-caption"></div> -->
+            </div>
+        </div>
+
+        <!-- Controls -->
+        <a class="left carousel-control" href="#carousel-banner" role="button" data-slide="prev">
+            <span class="glyphicon glyphicon-chevron-left" aria-hidden="true"></span>
+            <span class="sr-only">Previous</span>
+        </a>
+        <a class="right carousel-control" href="#carousel-banner" role="button" data-slide="next">
+            <span class="glyphicon glyphicon-chevron-right" aria-hidden="true"></span>
+            <span class="sr-only">Next</span>
+        </a>
+    </div>
+    <!-- 服务项目 -->
+    <a id="service" class="target-fix"></a>
+    <section class="service">
+        <div class="container">
+            <h2>服务项目</h2>
+            <h2>服务项目</h2>
+            <h2>服务项目</h2>
+            <h2>服务项目</h2>
+            <h2>服务项目</h2>
+        </div>
+    </section>
+    <!-- 客户案例 -->
+    <a id="case" class="target-fix"></a>
+    <section class="case">
+        <div class="container">
+            <h2>客户案例</h2>
+            <h2>客户案例</h2>
+            <h2>客户案例</h2>
+            <h2>客户案例</h2>
+            <h2>客户案例</h2>
+        </div>
+    </section>
+    <!-- 关于我们 -->
+    <a id="about" class="target-fix"></a>
+    <section class="about">
+        <div class="container">
+            <h2>关于我们</h2>
+        </div>
+    </section>
+    <!-- 联系我们 -->
+    <a id="contact" class="target-fix"></a>
+    <section class="contact">
+        <div class="container">
+            <h2>联系我们</h2>
+        </div>
+    </section>
+    <!-- 底部信息 -->
+    <footer class="footer">
+        <div class="copyright">
+            <div class="container">
+                <div class="row">
+                    <!--版权和备案信息-->
+                    <div class="col-md-12 footer-copyright">
+                        <span>
+                            Copyright © 2020
+                            <a href="https://smallpeak.top/">心诚科技工作室</a>
+                            All Rights Reserved
+                        </span>
+                        <span>
+                            <a href="http://www.miibeian.gov.cn/" target="_blank">
+                                鲁ICP备15013472号-2
+                            </a>
+                        </span>
+                    </div>
+                    <div class="col-md-12">
+                        <span>
+                            Powered by 
+                            <a href="https://help.github.com/categories/github-pages-basics/" target="_blank" title="GitHub Page">
+                                GitHub Page
+                            </a>
+                        </span>
+                        <span>邮箱:xinyflove@sina.com</span>
+                    </div>
+                    <div class="col-md-12" style="margin-top: 4px;display: block;">
+                        <span>
+                            <a href="http://jigsaw.w3.org/css-validator/check/referer">
+                                <img style="border:0;width:88px;height:31px"
+                                    src="http://jigsaw.w3.org/css-validator/images/vcss" alt="Valid CSS!">
+                            </a>
+                        </span>
+                    </div>
+
+                </div>
+            </div>
+        </div>
+    </footer>
+
+    <!-- jQuery (Bootstrap 的所有 JavaScript 插件都依赖 jQuery，所以必须放在前边) -->
+    <script src="./assets/lib/jquery/jquery.min.js?v=1.12.4"></script>
+    <!-- 加载 Bootstrap 的所有 JavaScript 插件。你也可以根据需要只加载单个插件。 -->
+    <script src="./assets/lib/bootstrap-3.3.7/js/bootstrap.min.js"></script>
 </body>
+
 </html>
