--- a/index.html
+++ b/index.html
@@ -21,14 +21,15 @@
     <link rel="stylesheet" href="./assets/css/main.css">
 </head>
 
-<body>
+<body data-spy="scroll" data-target=".navbar-menu">
     <!-- 导航条 -->
-    <nav class="navbar navbar-default navbar-fixed-top">
+    <a id="home" class="target-fix"></a>
+    <nav class="navbar navbar-default navbar-fixed-top navbar-menu">
         <div class="container">
             <!-- Brand and toggle get grouped for better mobile display -->
             <div class="navbar-header">
                 <button type="button" class="navbar-toggle collapsed" data-toggle="collapse"
-                    data-target="#bs-example-navbar-collapse-1" aria-expanded="false">
+                    data-target="#navbarCollapse" aria-expanded="false">
                     <span class="sr-only">Toggle navigation</span>
                     <span class="icon-bar"></span>
                     <span class="icon-bar"></span>
@@ -40,9 +41,9 @@
             </div>
 
             <!-- Collect the nav links, forms, and other content for toggling -->
-            <div class="collapse navbar-collapse" id="bs-example-navbar-collapse-1">
+            <div class="collapse navbar-collapse" id="navbarCollapse">
                 <ul class="nav navbar-nav navbar-right">
-                    <li class="active"><a href="./">首页 <span class="sr-only">(current)</span></a></li>
+                    <li class="active"><a href="#home">首页 <span class="sr-only">(current)</span></a></li>
                     <li><a href="#service">服务项目</a></li>
                     <li><a href="#case">客户案例</a></li>
                     <li><a href="#about">关于我们</a></li>
@@ -108,12 +109,22 @@
     <section class="about">
         <div class="container">
             <h2>关于我们</h2>
+            <h2>关于我们</h2>
+            <h2>关于我们</h2>
+            <h2>关于我们</h2>
+            <h2>关于我们</h2>
+            <h2>关于我们</h2>
         </div>
     </section>
     <!-- 联系我们 -->
     <a id="contact" class="target-fix"></a>
     <section class="contact">
         <div class="container">
+            <h2>联系我们</h2>
+            <h2>联系我们</h2>
+            <h2>联系我们</h2>
+            <h2>联系我们</h2>
+            <h2>联系我们</h2>
             <h2>联系我们</h2>
         </div>
     </section>
@@ -162,6 +173,7 @@
     <script src="./assets/lib/jquery/jquery.min.js?v=1.12.4"></script>
     <!-- 加载 Bootstrap 的所有 JavaScript 插件。你也可以根据需要只加载单个插件。 -->
     <script src="./assets/lib/bootstrap-3.3.7/js/bootstrap.min.js"></script>
+    <script src="./assets/js/main.js"></script>
 </body>
 
 </html>
