--- a/index.html
+++ b/index.html
@@ -22,7 +22,7 @@
 <body data-spy="scroll" data-target=".navbar-menu">
     <!-- 导航条 -->
     <a id="home" class="target-fix"></a>
-    <nav class="navbar navbar-default navbar-fixed-top navbar-menu">
+    <nav class="navbar navbar-default navbar-fixed-top">
         <div class="container">
             <!-- Brand and toggle get grouped for better mobile display -->
             <div class="navbar-header">
@@ -39,9 +39,9 @@
             </div>
 
             <!-- Collect the nav links, forms, and other content for toggling -->
-            <div class="collapse navbar-collapse" id="navbarCollapse">
+            <div class="collapse navbar-collapse  navbar-menu" id="navbarCollapse">
                 <ul class="nav navbar-nav navbar-right">
-                    <li class="active"><a href="#home">首页 <span class="sr-only">(current)</span></a></li>
+                    <li class="active"><a href="#home">网站首页 <span class="sr-only">(current)</span></a></li>
                     <li><a href="#service">服务项目</a></li>
                     <li><a href="#case">客户案例</a></li>
                     <li><a href="#about">关于我们</a></li>
@@ -84,46 +84,63 @@
     <a id="service" class="target-fix"></a>
     <section class="service">
         <div class="container">
-            <h2>服务项目</h2>
-            <h2>服务项目</h2>
-            <h2>服务项目</h2>
-            <h2>服务项目</h2>
-            <h2>服务项目</h2>
+            <div class="header text-center">
+                <h2>服务项目</h2>
+                <p class="text-muted">SERVICE PROJECT</p>
+            </div>
+            <div class="body">
+                <p class="lead">企业网站、微信公众号开发、微信小程序开发等。</p>
+            </div>
         </div>
     </section>
     <!-- 客户案例 -->
     <a id="case" class="target-fix"></a>
     <section class="case">
         <div class="container">
-            <h2>客户案例</h2>
-            <h2>客户案例</h2>
-            <h2>客户案例</h2>
-            <h2>客户案例</h2>
-            <h2>客户案例</h2>
+            <div class="header text-center">
+                <h2>客户案例</h2>
+                <p class="text-muted">CUSTOMER CASE</p>
+            </div>
+            <div class="body">
+                <p style="font-weight: bold; font-size: 20px; text-align: center;margin-top: 40px; color: #ffaa00;">
+                    公司在起步中，敬请期待！
+                </p>
+            </div>
         </div>
     </section>
     <!-- 关于我们 -->
     <a id="about" class="target-fix"></a>
     <section class="about">
         <div class="container">
-            <h2>关于我们</h2>
-            <h2>关于我们</h2>
-            <h2>关于我们</h2>
-            <h2>关于我们</h2>
-            <h2>关于我们</h2>
-            <h2>关于我们</h2>
+            <div class="header text-center">
+                <h2>关于我们</h2>
+                <p class="text-muted">ABOUT US</p>
+            </div>
+            <div class="body">
+                <h3>心诚科技工作室</h3>
+                <p class="lead">心诚科技工作室，成立于2020年，是由一群具有研发精神和创新精神的团队组成。目前起步中...</p>
+                <p class="lead">提升客户品牌形象、实现客户的商业目标是我们心诚科技永恒的追求与信念！</p>
+            </div>
         </div>
     </section>
     <!-- 联系我们 -->
     <a id="contact" class="target-fix"></a>
     <section class="contact">
         <div class="container">
-            <h2>联系我们</h2>
-            <h2>联系我们</h2>
-            <h2>联系我们</h2>
-            <h2>联系我们</h2>
-            <h2>联系我们</h2>
-            <h2>联系我们</h2>
+            <div class="header text-center">
+                <h2>联系我们</h2>
+                <p class="text-muted">CONTACT US</p>
+            </div>
+            <div class="body">
+                <h3>心诚科技工作室</h3>
+                <ul class="list-unstyled">
+                    <li>QQ：<span>2088867845</span></li>
+                    <li>微信：<span>1768578243</span></li>
+                    <li>电话：<span>1768578243</span></li>
+                    <li>邮箱：<span>xinyflove&#64;sina.com</span></li>
+                    <li>地址：<span>网上办公</span></li>
+                  </ul>
+            </div>
         </div>
     </section>
     <!-- 底部信息 -->
@@ -151,7 +168,7 @@
                                 GitHub Page
                             </a>
                         </span>
-                        <span>邮箱:xinyflove@sina.com</span>
+                        <span>邮箱:xinyflove&#64;sina.com</span>
                     </div>
                     <div class="col-md-12" style="margin-top: 4px;display: block;">
                         <span>
